<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/masterContentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.WeatherActivity"
    tools:showIn="@layout/activity_weather"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <RelativeLayout
            android:id="@+id/rlCurrentCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin_top"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_marginLeft="@dimen/padding_medium"
            android:visibility="gone"
            android:background="@drawable/gradient_black">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/ivWeatherIcon"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                app:viewAspectRatio="1"
                android:layout_height="30dp"
                android:scaleType="centerInside"
                android:padding="@dimen/padding_small"
                fresco:roundAsCircle="true"
                fresco:roundWithOverlayColor="@android:color/transparent"
                />
            <TextView
                android:id="@+id/tvWeatherCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:textSize="@dimen/textsize_large"
                android:textColor="@color/white"
                android:layout_alignBaseline="@id/ivWeatherIcon"
                android:layout_toRightOf="@id/ivWeatherIcon"
                android:layout_alignBottom="@id/ivWeatherIcon"
                android:layout_alignTop="@id/ivWeatherIcon"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:textSize="@dimen/textsize_medium"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_below="@id/ivWeatherIcon"
                android:drawableLeft="@drawable/ic_max"/>

            <TextView
                android:id="@+id/tvMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:textSize="@dimen/textsize_medium"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_below="@id/ivWeatherIcon"
                android:layout_toRightOf="@id/tvMaxTemp"
                android:drawableLeft="@drawable/ic_min"/>


            <TextView
                android:id="@+id/tvCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:textSize="80sp"
                android:textColor="@color/white"
                android:layout_below="@id/tvMaxTemp"/>
        </RelativeLayout>
        <android.support.v7.widget.CardView
            android:id="@+id/cvForecastDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/transluscent_black"
            android:layout_margin="@dimen/padding_medium"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium">
                <TextView
                    android:id="@+id/forecast_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forecast"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_large"/>
                <View
                    android:id="@+id/horizontalLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_below="@id/forecast_title"
                    android:layout_marginTop="@dimen/padding_small"
                    android:layout_marginBottom="@dimen/padding_small"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/horizontalLine">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/forecastListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </FrameLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvWindAndPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/transluscent_black"
            android:layout_margin="@dimen/padding_medium"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium">
                <TextView
                    android:id="@+id/windAndPressureTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_and_pressure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_large"/>
                <View
                    android:id="@+id/horizontalLine2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_below="@id/windAndPressureTitle"
                    android:layout_marginTop="@dimen/padding_small"
                    android:layout_marginBottom="@dimen/padding_small"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/horizontalLine2">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:viewAspectRatio="1"
                    app:backgroundImage="@mipmap/ic_windmill"
                    />
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2">
                    <View
                        android:id="@+id/horizontalLine3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/divider"/>
                        <TextView
                            android:id="@+id/tvWindSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/padding_small"
                            android:textSize="@dimen/textsize_medium"
                            android:fontFamily="sans-serif-light"
                            android:text="11"
                            android:layout_above="@id/horizontalLine3"/>
                        <TextView
                            android:id="@+id/tvWindSpeedUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/padding_small"
                            android:textSize="@dimen/textsize_small"
                            android:text="@string/speed_unit"
                            android:layout_above="@id/horizontalLine3"
                            android:layout_toRightOf="@id/tvWindSpeed"/>
                        <TextView
                            android:id="@+id/tvWindTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize_small"
                            android:text="@string/wind"
                            android:layout_above="@id/tvWindSpeed"/>
                        <TextView
                            android:id="@+id/tvPressureTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize_small"
                            android:text="@string/barometer"
                            android:layout_below="@id/horizontalLine3"
                            android:paddingRight="@dimen/padding_xlarge"
                            android:paddingTop="@dimen/padding_small"
                            android:layout_alignParentRight="true"/>
                        <TextView
                            android:id="@+id/tvPressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/padding_small"
                            android:textSize="@dimen/textsize_medium"
                            android:fontFamily="sans-serif-light"
                            android:text="1056"
                            android:layout_below="@id/tvPressureTitle"
                            android:layout_alignLeft="@id/tvPressureTitle"/>
                        <TextView
                            android:id="@+id/tvPressureUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/padding_small"
                            android:textSize="@dimen/textsize_small"
                            android:text="@string/pressure_unit"
                            android:layout_below="@id/tvPressureTitle"
                            android:layout_toRightOf="@id/tvPressure"
                            android:layout_alignBaseline="@id/tvPressure"/>

                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
